--- a/app.json
+++ b/app.json
@@ -17,7 +17,13 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.movetech.simanis",
+      "buildNumber": "1.0.0"
+    },
+    "android":{
+      "package": "com.movetech.simanis",
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/favicon.png"
