--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@expo-google-fonts/inter": "^0.1.0",
     "@expo-google-fonts/poppins": "^0.1.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "^1.9.2",
     "@react-navigation/bottom-tabs": "^5.9.0",
     "@react-navigation/drawer": "^5.9.1",
     "@react-navigation/native": "^5.7.4",
@@ -23,6 +24,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-paper": "^4.2.0",
+    "react-native-paper-dropdown": "0.0.5",
     "react-native-reanimated": "~1.13.0",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "3.1.4",
